--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
     "jspdf": "^3.0.3",
+    "linkedin-jobs-api": "^1.0.7",
     "lucide-react": "^0.462.0",
     "mammoth": "^1.11.0",
     "next-themes": "^0.3.0",
+    "node-fetch": "^3.3.2",
     "pdf2pic": "^3.2.0",
     "pdfjs-dist": "^5.4.149",
     "react": "^18.3.1",
